--- a/ai_langchain4j_demo/src/main/resources/application.yml
+++ b/ai_langchain4j_demo/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ai_demo?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Asia/Shanghai
-    username: root
-    password: root
+    username: {{}}
+    password: {{}}
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       connection-timeout: 30000
@@ -38,7 +38,7 @@ logging:
 langchain4j:
   siliconflow:
     base-url: https://api.siliconflow.com/v1
-    api-key: sk-dorbshcyzonaahgmzkjadqdngwawqxpywzqztztashgxnjjx
+    api-key: {}
     model: Qwen/Qwen2.5-7B-Instruct
     strime: true
   embedding-model:
